--- a/src/style.css
+++ b/src/style.css
@@ -13,3 +13,15 @@ body
     left:0;
     top:0;
 }
+
+
+.github
+{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    background: #000;
+    color: #fff;
+    font-family: monospace;
+    font-size: 0.8rem;
+}
